Fixed minor layout bug in seller/updateProduct page

--- a/seller/updateProduct/updateProduct.css
+++ b/seller/updateProduct/updateProduct.css
@@ -6,16 +6,9 @@ body {
     justify-content: center;
 }
 
-body h2 {
-    position: absolute;
-    top:200px;
-    font-family: 'inter', sans-serif;
-    font-weight: bolder;
-    color: black;
-}
-
-.product-creation-container {
+.product-update-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     border-radius: 20px;
     position: relative;
@@ -24,13 +17,11 @@ body h2 {
     width: 30%;
     height: fit-content;
     font-family: 'inter', sans-serif;
-    letter-spacing: 2px;
-    font-weight: bold;
-    color: gray;
+    
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.product-creation-container button {
+.product-update-container button {
     padding: 10px;
     border: rgba(0, 0, 0, 0);
     border-radius: 10px;
@@ -42,5 +33,8 @@ body h2 {
 
 .form-element-container {
     position: relative;
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: gray;
     padding: 15px;
 }
